--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
                         </button>
                         <div class="collapse navbar-collapse" id="navbarUlivem">
                             <ul class="d-flex flex-wrap m-0 pl-4 navbar-nav">
-                                <li class="nav-item pr-4 pb-2 pb-sm-1"><a href="#" class="text-white position-relative">О компании</a></li>
-                                <li class="nav-item pr-4 pb-2 pb-sm-1"><a href="#" class="text-white position-relative">Услуги</a></li>
+                                <li class="nav-item pr-4 pb-2 pb-sm-1"><a href="/about/" class="text-white position-relative">О компании</a></li>
+                                <li class="nav-item pr-4 pb-2 pb-sm-1"><a href="/uslugi/" class="text-white position-relative">Услуги</a></li>
                                 <li class="nav-item pr-4 pb-2 pb-sm-1"><a href="#" class="text-white position-relative">Новости</a></li>
-                                <li class="nav-item pr-4 pb-2 pb-sm-1"><a href="#" class="text-white position-relative">Контакты</a></li>
+                                <li class="nav-item pr-4 pb-2 pb-sm-1"><a href="/contacts/" class="text-white position-relative">Контакты</a></li>
                             </ul>
                         </div>
                     </nav>
@@ -52,7 +52,7 @@
                     <div class="top-contacts d-flex flex-wrap flex-sm-nowrap align-items-center">
                         <div class="top-phone pr-xl-4 pr-sm-2 pr-3 py-1 py-sm-0"><a href="tel:+78129817739" class="d-flex align-items-center"><img src="img/top-phone.png" alt="" class="mx-2"> 8 (812) 981 77 39</a></div>
                         <div class="top-mob pr-xl-4 pr-sm-2 pr-3 py-1 py-sm-0"><a href="tel:+89531775738" class="d-flex align-items-center"><img src="img/top-mob.png" alt="" class="mx-2"> 8 953 177 57 38</a></div>
-                        <div class="top-mail pr-xl-4 pr-sm-2 pr-3 py-1 py-sm-0"><a href="mailto:info@emelka.ru"><img src="img/top-mail.png" alt="" class="mx-2"> info@emelka.ru</div>
+                        <div class="top-mail pr-xl-4 pr-sm-2 pr-3 py-1 py-sm-0"><a href="mailto:info@emelka.ru"><img src="img/top-mail.png" alt="" class="mx-2"> info@emelka.ru</a></div>
                     </div>
                     <div class="top-soc ml-auto d-flex align-items-center position-relative">
                         <a href="#" class="px-1 px-sm-1" target="_blank"><img src="img/top-inst-new.png" alt=""></a>
@@ -83,7 +83,7 @@
                             <li>Баннер (440гр, 510, литой,  транслюцентный  и т.д.)</li>
                             <li>Пластик (ПВХ 1. 2, 3, 5 мм)</li>
                         </ul>
-                        <a href="" class="text-uppercase font-weight-bold mt-4 mt-md-auto top-slider-detail">Подробнее <span></span></a>
+                        <a href="/uslugi/" class="text-uppercase font-weight-bold mt-4 mt-md-auto top-slider-detail">Подробнее <span></span></a>
                         <ul class="top-slider-indicators d-flex p-0 mb-5">
                             <li data-target="#top-slider" data-slide-to="0" class="active">01</li>
                             <li data-target="#top-slider" data-slide-to="1">02</li>
@@ -114,7 +114,7 @@
                             <li>Печать с тиснением </li>
                             <li>Фольгирование (серебро, золото)</li>
                         </ul>
-                        <a href="" class="text-uppercase font-weight-bold mt-4 mt-md-auto top-slider-detail">Подробнее <span></span></a>
+                        <a href="/uslugi/" class="text-uppercase font-weight-bold mt-4 mt-md-auto top-slider-detail">Подробнее <span></span></a>
                         <ul class="top-slider-indicators d-flex p-0 mb-5">
                             <li data-target="#top-slider" data-slide-to="0">01</li>
                             <li data-target="#top-slider" data-slide-to="1" class="active">02</li>
@@ -144,7 +144,7 @@
                             <li>наружная реклама</li>
                             <li>создание креативных слоганов и стихов</li>
                         </ul>
-                        <a href="" class="text-uppercase font-weight-bold mt-4 mt-md-auto top-slider-detail">Подробнее <span></span></a>
+                        <a href="/uslugi/" class="text-uppercase font-weight-bold mt-4 mt-md-auto top-slider-detail">Подробнее <span></span></a>
                         <ul class="top-slider-indicators d-flex p-0 mb-5">
                             <li data-target="#top-slider" data-slide-to="0">01</li>
                             <li data-target="#top-slider" data-slide-to="1">02</li>
@@ -167,7 +167,7 @@
                             <li>landing page - много блоков</li>
                             <li>landing page - индивидуальный</li>
                         </ul>
-                        <a href="" class="text-uppercase font-weight-bold mt-4 mt-md-auto top-slider-detail">Подробнее <span></span></a>
+                        <a href="/uslugi/" class="text-uppercase font-weight-bold mt-4 mt-md-auto top-slider-detail">Подробнее <span></span></a>
                         <ul class="top-slider-indicators d-flex p-0 mb-5">
                             <li data-target="#top-slider" data-slide-to="0">01</li>
                             <li data-target="#top-slider" data-slide-to="1">02</li>
@@ -192,7 +192,7 @@
             <p class="font-weight-bold pt-2">Наш многолетний опыт в сфере дизайна и полиграфии позволяет нам тонко чувствовать, смело излагать и точно бить в цель.</p>
             <p class="font-weight-bold pt-2">Мы давно и успешно объединяем наши знания и опыт с целями наших клиентов. В итоге - получаем результат.</p>
             <p class="font-weight-bold pt-2">Вам нужен результат? Тогда нам по пути!</p>
-            <a href="" class="missia-detail text-center text-white text-uppercase d-block py-3 mt-5">Подробнее <span></span></a>
+            <a href="/about/" class="missia-detail text-center text-white text-uppercase d-block py-3 mt-5">Подробнее <span></span></a>
         </div>
     </section>
 
@@ -251,27 +251,27 @@
             <div class="uslugi-wrap d-flex flex-wrap justify-content-center justify-content-xl-between">
                 <div class="uslugi-item mb-5 position-relative">
                     <img src="img/uslugi-1.jpg" alt="" class="w-100">
-                    <a href="" class="text-white text-center text-uppercase py-3 position-absolute">фирменный стиль</a>
+                    <a href="/uslugi/" class="text-white text-center text-uppercase py-3 position-absolute">фирменный стиль</a>
                 </div>
                 <div class="uslugi-item mb-5 position-relative">
                     <img src="img/uslugi-2.jpg" alt="" class="w-100">
-                    <a href="" class="text-white text-center text-uppercase py-3 position-absolute">бизнес-материалы</a>
+                    <a href="/uslugi/" class="text-white text-center text-uppercase py-3 position-absolute">бизнес-материалы</a>
                 </div>
                 <div class="uslugi-item mb-5 position-relative">
                     <img src="img/uslugi-3.jpg" alt="" class="w-100">
-                    <a href="" class="text-white text-center text-uppercase py-3 position-absolute">аФИШИ</a>
+                    <a href="/uslugi/" class="text-white text-center text-uppercase py-3 position-absolute">аФИШИ</a>
                 </div>
                 <div class="uslugi-item mb-5 position-relative">
                     <img src="img/uslugi-4.jpg" alt="" class="w-100">
-                    <a href="" class="text-white text-center text-uppercase py-3 position-absolute">ПРОМО-Матералы</a>
+                    <a href="/uslugi/" class="text-white text-center text-uppercase py-3 position-absolute">ПРОМО-Матералы</a>
                 </div>
                 <div class="uslugi-item mb-5 position-relative">
                     <img src="img/uslugi-5.jpg" alt="" class="w-100">
-                    <a href="" class="text-white text-center text-uppercase py-3 position-absolute">БАННЕРЫ, РОЛЛАПЫ</a>
+                    <a href="/uslugi/" class="text-white text-center text-uppercase py-3 position-absolute">БАННЕРЫ, РОЛЛАПЫ</a>
                 </div>
                 <div class="uslugi-item mb-5 position-relative">
                     <img src="img/uslugi-6.jpg" alt="" class="w-100">
-                    <a href="" class="text-white text-center text-uppercase py-3 position-absolute">сайты</a>
+                    <a href="/uslugi/" class="text-white text-center text-uppercase py-3 position-absolute">сайты</a>
                 </div>
             </div>
         </div>
@@ -326,7 +326,7 @@
                     <img src="img/arr-right-new.png" alt="">
                 </a>
             </div>
-            <a href="" class="text-uppercase font-weight-bold my-3 mx-auto py-3 text-white formaty-slider-detail d-block text-center position-relative">Заказать <span></span></a>
+            <a href="#" class="text-uppercase font-weight-bold my-3 mx-auto py-3 text-white formaty-slider-detail d-block text-center position-relative">Заказать <span></span></a>
         </div>
     </section>
 
@@ -446,7 +446,7 @@
                     <p class="news-date">20.02.21</p>
                     <p class="news-prew-text text-white">Креативный директор Gucci Алессандро Микеле разработал пару неоновых кроссовок, предназначенных только для цифровых технологий, которые люди могут примерить, используя дополненную реальность и «надевать» на фотографиях для социальных сетей.
                         Gucci Virtual 25, названный в честь любимого числа Микеле, представляет собой гибрид с низким верхом и высоким верхом с флуоресцентным верхом зеленого цвета.</p>
-                    <a href="" class="text-uppercase font-weight-bold my-3 py-3 px-4 text-white news-detail d-block position-relative">Читать далее <span></span></a>
+                    <a href="#" class="text-uppercase font-weight-bold my-3 py-3 px-4 text-white news-detail d-block position-relative">Читать далее <span></span></a>
                 </div>
             </div>
             <div class="row news-wrap my-3">
@@ -456,7 +456,7 @@
                     <p class="news-date">19.02.21</p>
                     <p class="news-prew-text text-white">Renault официально представил обновленный логотип бренда в 2021 году впервые с 1925 года.
                         Новой эмблемой будут вскоре оснащать все машины концерна Renault. Впервые такой логотип увидеть можно было на концептуальной модели, называющейся 5 Prototype, она стала идеологическим преемником модели Renault 5 (R5) (этот автомобиль выпускался с 1972 по 1996 год).</p>
-                    <a href="" class="text-uppercase font-weight-bold my-3 py-3 px-4 text-white news-detail d-block position-relative">Читать далее <span></span></a>
+                    <a href="#" class="text-uppercase font-weight-bold my-3 py-3 px-4 text-white news-detail d-block position-relative">Читать далее <span></span></a>
                 </div>
             </div>
             <div class="row news-wrap my-3">
@@ -465,7 +465,7 @@
                     <h4 class="news-title text-white text-uppercase">Канадская компания СHOP Value делает мебель из палочек для еды</h4>
                     <p class="news-date">18.02.21</p>
                     <p class="news-prew-text text-white">ChopValue, стартап из Ванкувера, восстанавливает одноразовые палочки для еды, превращая их в мебель. С момента своего основания в 2016 году компания спасла миллионы столовых приборов от свалок. Целью компании было желание уберечь палочки от свалок, где они разлагаются и продлить срок их службы. Работая с ресторанами, Феликс создал мусорные баки и систему сбора палочек для еды, которыми пользовались их клиенты. Собранная древесина затем доставлялась на местные предприятия для переработки в ценные товары.</p>
-                    <a href="" class="text-uppercase font-weight-bold my-3 py-3 px-4 text-white news-detail d-block position-relative">Читать далее <span></span></a>
+                    <a href="#" class="text-uppercase font-weight-bold my-3 py-3 px-4 text-white news-detail d-block position-relative">Читать далее <span></span></a>
                 </div>
             </div>
         </div>
@@ -527,9 +527,9 @@
                 <a href="mailto:info@emelka.ru" class="text-white mx-3 pb-3"><img src="img/bottom-mail.png" alt=""> info@emelka.ru</a>
             </div>
             <div class="foot-soc d-flex justify-content-center">
-                <a href="" class="mx-2"><img src="img/bottom-inst.png" alt=""></a>
-                <a href="" class="mx-2"><img src="img/bottom-vk.png" alt=""></a>
-                <a href="" class="mx-2"><img src="img/bottom-fb.png" alt=""></a>
+                <a href="#" class="mx-2"><img src="img/bottom-inst.png" alt=""></a>
+                <a href="#" class="mx-2"><img src="img/bottom-vk.png" alt=""></a>
+                <a href="#" class="mx-2"><img src="img/bottom-fb.png" alt=""></a>
             </div>
         </div>
         <div class="foot-copy pt-3 pb-4 px-2 text-center text-white">&copy; 2021 Компания “Юливем” в Санкт-Петербурге.  Все права защищены.</div>
