--- a/about.html
+++ b/about.html
@@ -40,10 +40,10 @@
                         </button>
                         <div class="collapse navbar-collapse" id="navbarUlivem">
                             <ul class="d-flex flex-wrap m-0 pl-4 navbar-nav">
-                                <li class="nav-item pr-4 pb-2 pb-sm-1"><a href="#" class="text-white position-relative">О компании</a></li>
-                                <li class="nav-item pr-4 pb-2 pb-sm-1"><a href="#" class="text-white position-relative">Услуги</a></li>
+                                <li class="nav-item pr-4 pb-2 pb-sm-1"><a href="/about/" class="text-white position-relative">О компании</a></li>
+                                <li class="nav-item pr-4 pb-2 pb-sm-1"><a href="/uslugi/" class="text-white position-relative">Услуги</a></li>
                                 <li class="nav-item pr-4 pb-2 pb-sm-1"><a href="#" class="text-white position-relative">Новости</a></li>
-                                <li class="nav-item pr-4 pb-2 pb-sm-1"><a href="#" class="text-white position-relative">Контакты</a></li>
+                                <li class="nav-item pr-4 pb-2 pb-sm-1"><a href="/contacts/" class="text-white position-relative">Контакты</a></li>
                             </ul>
                         </div>
                     </nav>
@@ -66,9 +66,9 @@
 
     <div class="yellow-line pt-3 pb-2">
         <div class="container-xl px-4">
-            <a href="" class="home position-relative pl-3"><img src="img/home.png" alt=""></a>
+            <a href="/" class="home position-relative pl-3"><img src="img/home.png" alt=""></a>
             <span class="mx-3">|</span>
-            <a href="" class="text-dark text-uppercase">О компании</a>
+            <a href="/about/" class="text-dark text-uppercase">О компании</a>
         </div>
     </div>
 
@@ -128,14 +128,14 @@
         <div class="foot-content position-relative mx-auto py-3">
             <div class="foot-logo text-center"><img src="img/logo-bottom.jpg" alt="" class="img-fluid"></div>
             <div class="foot-contacts py-4 d-flex flex-wrap justify-content-center align-items-center">
-                <a href="" class="text-white mx-3 pb-3"><img src="img/bottom-phone.png" alt=""> 8 (812) 981 77 39</a>
-                <a href="" class="text-white mx-3 pb-3"><img src="img/bottom-mob.png" alt=""> 8 953 177 57 38</a>
-                <a href="" class="text-white mx-3 pb-3"><img src="img/bottom-mail.png" alt=""> info@emelka.ru</a>
+                <a href="tel:+78129817739" class="text-white mx-3 pb-3"><img src="img/bottom-phone.png" alt=""> 8 (812) 981 77 39</a>
+                <a href="tel:+79531775738" class="text-white mx-3 pb-3"><img src="img/bottom-mob.png" alt=""> 8 953 177 57 38</a>
+                <a href="mailto:info@emelka.ru" class="text-white mx-3 pb-3"><img src="img/bottom-mail.png" alt=""> info@emelka.ru</a>
             </div>
             <div class="foot-soc d-flex justify-content-center">
-                <a href="" class="mx-2"><img src="img/bottom-inst.png" alt=""></a>
-                <a href="" class="mx-2"><img src="img/bottom-vk.png" alt=""></a>
-                <a href="" class="mx-2"><img src="img/bottom-fb.png" alt=""></a>
+                <a href="#" class="mx-2"><img src="img/bottom-inst.png" alt=""></a>
+                <a href="#" class="mx-2"><img src="img/bottom-vk.png" alt=""></a>
+                <a href="#" class="mx-2"><img src="img/bottom-fb.png" alt=""></a>
             </div>
         </div>
         <div class="foot-copy pt-3 pb-4 px-2 text-center text-white">&copy; 2021 Компания “Юливем” в Санкт-Петербурге.  Все права защищены.</div>
