--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="css/slick.css" rel="stylesheet" type="text/css">
     <link href="css/slick-theme.css" rel="stylesheet" type="text/css">
+    <link href="css/aos.css" rel="stylesheet" type="text/css">
 	<link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -64,7 +65,7 @@
         </div>
     </header>
 
-    <div id="top-slider" class="carousel slide carousel-fade" data-ride="carousel" data-interval="false">
+    <div id="top-slider" class="carousel slide carousel-fade" data-ride="carousel" data-interval="5000">
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <div class="d-flex flex-wrap">
@@ -201,44 +202,44 @@
             <h3 class="text-uppercase text-center text-white"><span class="position-relative">наши РЕАЛИЗОВАНЫЕ</span></h3>
             <h2 class="text-uppercase text-center text-white font-weight-bold pt-2">дизайн-ПРОЕКТЫ</h2>
             <div class="proekty-wrap d-flex flex-wrap justify-content-center justify-content-xl-between">
-                <div class="proekt-item pb-3">
-                    <img src="img/proekt-1.jpg" alt="" class="w-100">
+                <div class="proekt-item pb-3" data-aos="fade-up" data-aos-duration="1000">
+                    <div class="proekt-img-wrap"><img src="img/proekt-1.jpg" alt="" class="w-100"></div>
                     <h5 class="text-white text-center text-uppercase">Логотипы</h5>
                 </div>
-                <div class="proekt-item pb-3">
-                    <img src="img/proekt-2.jpg" alt="" class="w-100">
+                <div class="proekt-item pb-3" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
+                    <div class="proekt-img-wrap"><img src="img/proekt-2.jpg" alt="" class="w-100"></div>
                     <h5 class="text-white text-center text-uppercase">визитки, листовки, флаеры</h5>
                 </div>
-                <div class="proekt-item pb-3">
-                    <img src="img/proekt-3.jpg" alt="" class="w-100">
+                <div class="proekt-item pb-3" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
+                    <div class="proekt-img-wrap"><img src="img/proekt-3.jpg" alt="" class="w-100"></div>
                     <h5 class="text-white text-center text-uppercase">роллапы, баннеры</h5>
                 </div>
-                <div class="proekt-item pb-3">
-                    <img src="img/proekt-4.jpg" alt="" class="w-100">
+                <div class="proekt-item pb-3" data-aos="fade-right" data-aos-duration="1000">
+                    <div class="proekt-img-wrap"><img src="img/proekt-4.jpg" alt="" class="w-100"></div>
                     <h5 class="text-white text-center text-uppercase">Афиши</h5>
                 </div>
-                <div class="proekt-item pb-3">
-                    <img src="img/proekt-5.jpg" alt="" class="w-100">
+                <div class="proekt-item pb-3" data-aos="zoom-in" data-aos-duration="1000">
+                    <div class="proekt-img-wrap"><img src="img/proekt-5.jpg" alt="" class="w-100"></div>
                     <h5 class="text-white text-center text-uppercase">лайтбоксы, билборды</h5>
                 </div>
-                <div class="proekt-item pb-3">
-                    <img src="img/proekt-6.jpg" alt="" class="w-100">
+                <div class="proekt-item pb-3" data-aos="fade-left" data-aos-duration="1000">
+                    <div class="proekt-img-wrap"><img src="img/proekt-6.jpg" alt="" class="w-100"></div>
                     <h5 class="text-white text-center text-uppercase">сувенирная продукция</h5>
                 </div>
-                <div class="proekt-item pb-3">
-                    <img src="img/proekt-7.jpg" alt="" class="w-100">
+                <div class="proekt-item pb-3" data-aos="flip-right" data-aos-duration="1500">
+                    <div class="proekt-img-wrap"><img src="img/proekt-7.jpg" alt="" class="w-100"></div>
                     <h5 class="text-white text-center text-uppercase">этикетки, упаковка</h5>
                 </div>
-                <div class="proekt-item pb-3">
-                    <img src="img/proekt-8.jpg" alt="" class="w-100">
+                <div class="proekt-item pb-3" data-aos="flip-up" data-aos-duration="1500">
+                    <div class="proekt-img-wrap"><img src="img/proekt-8.jpg" alt="" class="w-100"></div>
                     <h5 class="text-white text-center text-uppercase">3D дизайн</h5>
                 </div>
-                <div class="proekt-item pb-3">
-                    <img src="img/proekt-9.jpg" alt="" class="w-100">
+                <div class="proekt-item pb-3" data-aos="flip-left" data-aos-duration="1500">
+                    <div class="proekt-img-wrap"><img src="img/proekt-9.jpg" alt="" class="w-100"></div>
                     <h5 class="text-white text-center text-uppercase">сайты</h5>
                 </div>
             </div>
-            <a href="#proekty-modal" data-toggle="modal" class="proekty-detail text-white text-uppercase d-block py-3 pl-5">больше проектов <span></span></a>
+            <a href="#proekty-modal" data-toggle="modal" class="proekty-detail text-uppercase d-block py-3 pl-5">больше проектов <span></span></a>
         </div>
     </section>
 
@@ -249,27 +250,27 @@
             <p class="text-center pb-5">Печатаем абсолютно все: от открыток и визиток до широкоформатных баннеров и наклеек -<br> 
                 это то, в чем мы хороши!</p>
             <div class="uslugi-wrap d-flex flex-wrap justify-content-center justify-content-xl-between">
-                <div class="uslugi-item mb-5 position-relative">
+                <div class="uslugi-item mb-5 position-relative" data-aos="fade-down-right" data-aos-duration="1500">
                     <img src="img/uslugi-1.jpg" alt="" class="w-100">
                     <a href="/uslugi/" class="text-white text-center text-uppercase py-3 position-absolute">фирменный стиль</a>
                 </div>
-                <div class="uslugi-item mb-5 position-relative">
+                <div class="uslugi-item mb-5 position-relative" data-aos="fade-down" data-aos-duration="1500">
                     <img src="img/uslugi-2.jpg" alt="" class="w-100">
                     <a href="/uslugi/" class="text-white text-center text-uppercase py-3 position-absolute">бизнес-материалы</a>
                 </div>
-                <div class="uslugi-item mb-5 position-relative">
+                <div class="uslugi-item mb-5 position-relative" data-aos="fade-down-left" data-aos-duration="1500">
                     <img src="img/uslugi-3.jpg" alt="" class="w-100">
                     <a href="/uslugi/" class="text-white text-center text-uppercase py-3 position-absolute">аФИШИ</a>
                 </div>
-                <div class="uslugi-item mb-5 position-relative">
+                <div class="uslugi-item mb-5 position-relative" data-aos="fade-up-right" data-aos-duration="1500">
                     <img src="img/uslugi-4.jpg" alt="" class="w-100">
                     <a href="/uslugi/" class="text-white text-center text-uppercase py-3 position-absolute">ПРОМО-Матералы</a>
                 </div>
-                <div class="uslugi-item mb-5 position-relative">
+                <div class="uslugi-item mb-5 position-relative" data-aos="fade-up" data-aos-duration="1500">
                     <img src="img/uslugi-5.jpg" alt="" class="w-100">
                     <a href="/uslugi/" class="text-white text-center text-uppercase py-3 position-absolute">БАННЕРЫ, РОЛЛАПЫ</a>
                 </div>
-                <div class="uslugi-item mb-5 position-relative">
+                <div class="uslugi-item mb-5 position-relative" data-aos="fade-up-left" data-aos-duration="1500">
                     <img src="img/uslugi-6.jpg" alt="" class="w-100">
                     <a href="/uslugi/" class="text-white text-center text-uppercase py-3 position-absolute">сайты</a>
                 </div>
@@ -442,32 +443,33 @@
             <div class="row news-wrap my-3">
                 <div class="col-md-4 news-pic text-center pb-3"><img src="img/news-1.jpg" alt="" class="img-fluid"></div>
                 <div class="col-md-8 news-text">
-                    <h4 class="news-title text-white text-uppercase">Gucci выпускает первые кроссовки Virtual 25, которые можно носить только в дополненной реальности</h4>
+                    <h4 class="news-title text-uppercase">Gucci выпускает первые кроссовки Virtual 25, которые можно носить только в дополненной реальности</h4>
                     <p class="news-date">20.02.21</p>
-                    <p class="news-prew-text text-white">Креативный директор Gucci Алессандро Микеле разработал пару неоновых кроссовок, предназначенных только для цифровых технологий, которые люди могут примерить, используя дополненную реальность и «надевать» на фотографиях для социальных сетей.
+                    <p class="news-prew-text text-white pb-3">Креативный директор Gucci Алессандро Микеле разработал пару неоновых кроссовок, предназначенных только для цифровых технологий, которые люди могут примерить, используя дополненную реальность и «надевать» на фотографиях для социальных сетей.
                         Gucci Virtual 25, названный в честь любимого числа Микеле, представляет собой гибрид с низким верхом и высоким верхом с флуоресцентным верхом зеленого цвета.</p>
-                    <a href="#" class="text-uppercase font-weight-bold my-3 py-3 px-4 text-white news-detail d-block position-relative">Читать далее <span></span></a>
+                    <!--<a href="#" class="text-uppercase font-weight-bold my-3 py-3 px-4 text-white news-detail d-block position-relative">Читать далее <span></span></a>-->
                 </div>
             </div>
             <div class="row news-wrap my-3">
                 <div class="col-md-4 news-pic text-center pb-3"><img src="img/news-2.jpg" alt="" class="img-fluid"></div>
                 <div class="col-md-8 news-text">
-                    <h4 class="news-title text-white text-uppercase">Компания Renault представила обновленный логотип</h4>
+                    <h4 class="news-title text-uppercase">Компания Renault представила обновленный логотип</h4>
                     <p class="news-date">19.02.21</p>
-                    <p class="news-prew-text text-white">Renault официально представил обновленный логотип бренда в 2021 году впервые с 1925 года.
+                    <p class="news-prew-text text-white pb-3">Renault официально представил обновленный логотип бренда в 2021 году впервые с 1925 года.
                         Новой эмблемой будут вскоре оснащать все машины концерна Renault. Впервые такой логотип увидеть можно было на концептуальной модели, называющейся 5 Prototype, она стала идеологическим преемником модели Renault 5 (R5) (этот автомобиль выпускался с 1972 по 1996 год).</p>
-                    <a href="#" class="text-uppercase font-weight-bold my-3 py-3 px-4 text-white news-detail d-block position-relative">Читать далее <span></span></a>
+                    <!--<a href="#" class="text-uppercase font-weight-bold my-3 py-3 px-4 text-white news-detail d-block position-relative">Читать далее <span></span></a>-->
                 </div>
             </div>
             <div class="row news-wrap my-3">
                 <div class="col-md-4 news-pic text-center pb-3"><img src="img/news-3.jpg" alt="" class="img-fluid"></div>
                 <div class="col-md-8 news-text">
-                    <h4 class="news-title text-white text-uppercase">Канадская компания СHOP Value делает мебель из палочек для еды</h4>
+                    <h4 class="news-title text-uppercase">Канадская компания СHOP Value делает мебель из палочек для еды</h4>
                     <p class="news-date">18.02.21</p>
-                    <p class="news-prew-text text-white">ChopValue, стартап из Ванкувера, восстанавливает одноразовые палочки для еды, превращая их в мебель. С момента своего основания в 2016 году компания спасла миллионы столовых приборов от свалок. Целью компании было желание уберечь палочки от свалок, где они разлагаются и продлить срок их службы. Работая с ресторанами, Феликс создал мусорные баки и систему сбора палочек для еды, которыми пользовались их клиенты. Собранная древесина затем доставлялась на местные предприятия для переработки в ценные товары.</p>
-                    <a href="#" class="text-uppercase font-weight-bold my-3 py-3 px-4 text-white news-detail d-block position-relative">Читать далее <span></span></a>
+                    <p class="news-prew-text text-white pb-3">ChopValue, стартап из Ванкувера, восстанавливает одноразовые палочки для еды, превращая их в мебель. С момента своего основания в 2016 году компания спасла миллионы столовых приборов от свалок. Целью компании было желание уберечь палочки от свалок, где они разлагаются и продлить срок их службы. Работая с ресторанами, Феликс создал мусорные баки и систему сбора палочек для еды, которыми пользовались их клиенты. Собранная древесина затем доставлялась на местные предприятия для переработки в ценные товары.</p>
+                    <!--<a href="#" class="text-uppercase font-weight-bold my-3 py-3 px-4 text-white news-detail d-block position-relative">Читать далее <span></span></a>-->
                 </div>
             </div>
+            <a href="/ulivem/news/" class="allnews text-uppercase d-block py-3 pl-5">больше новостей <span></span></a>
         </div>
     </section>
 
@@ -598,6 +600,7 @@
 	<script src="js/jquery-3.6.0.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
     <script src="js/slick.min.js"></script>
+    <script src="js/aos.js"></script>
 	<script src="js/scripts.js"></script>
 </body>
 </html>
